# tiny-adventure-gamedev

./: .gitignore  Cargo.toml  Justfile  NOTES.md  README.md
assets/ldtk/: simple-rpg-map.ldtk
assets/ldtk/simple-rpg-map/tiled/: Level_0.json  Level_0.tmx
assets/tiled/rpg/: Level_0.json  Level_0.tmx  Level_1.json  Level_1.tmx  grass.tsx  objects.tsx  plains.tsx  rpg.tiled-session
assets/tiny_swords/resources/sheep/: happy_sheep.json
assets/tiny_swords/resources/trees/: tree.json
crates/web3-solana-wallet-sdk/: Cargo.toml  NOTES.md  README.md
crates/web3-solana-wallet-sdk/src/: lib.rs
crates/web3-solana-wallet-sdk/src/adaptor/: mod.rs  phantom.rs
crates/web3-solana-wallet-sdk/src/core/: wallet.rs
examples/: animated_sheep_and_trees.rs
mini-games/: Cargo.toml
src/: game.rs  lib.rs  main.rs  player.rs  renderer.rs  shared.rs  timers.rs
tests/: game_tests.rs
tiny-adventure/: Cargo.toml
tiny-adventure/src/: game.rs  input.rs  lib.rs  main.rs  player.rs  renderer.rs
tiny-adventure/tests/: game_tests.rs
web3-games/: Cargo.toml  NOTES.md  README.md  index.html  index.html.plugin
