[package]
name = "web3-solana-wallet-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emitter-rs = "0.0.5"
js-sys = "0.3"
log = "0.4"
serde-wasm-bindgen = "0.6"
solana-client-wasm = "1.18"
solana-sdk = "=1.18.7"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"